--- a/galeria.html
+++ b/galeria.html
@@ -236,8 +236,9 @@
    <DIV class="contenedorbotoncerrar">
   <a class="botonatras" onclick="abrirVentanaExpansiones()" style="background-image: url(./assets/expansiones.webp);"> EXPANSIONES </a>
     <button  class="botonatras"> X </button>
-      <div  class="botonatras" style="background-image: url(./assets/intercambio.webp);"> CAMBIAR </div>
+      <a id="botonCambiar"  class="botonatras" style="background-image: url(./assets/intercambio.webp);"> CAMBIAR </a>
 </DIV>
+
         </div>
 
 
@@ -249,9 +250,15 @@
 
 <!-------------------------------------001---------------------------------------->  
          <div class="carousel-item Cnormal" id="carousel-item-1" >
+
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/001.webp" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/001.webp" />  
+               <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>       
+                      
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -261,7 +268,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-2" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/002.webp" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/002.webp" />   
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>               
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -271,7 +282,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-3" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/003.webp" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/003.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -281,7 +296,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-4" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -291,7 +310,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-5" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/005.webp" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/005.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -301,7 +324,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-6" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -311,7 +338,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-7" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -321,7 +352,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-8" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -331,7 +366,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-9" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -341,7 +380,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-10" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/010.webp" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/010.webp" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -351,7 +394,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-11" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -361,7 +408,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-12" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" /> 
+                         <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                 
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -371,7 +422,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-13" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -381,7 +436,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-14" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -391,7 +450,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-15" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -401,7 +464,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-16" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -411,7 +478,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-17" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" /> 
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                 
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -421,7 +492,11 @@
          <div class="carousel-item Cnormal" id="carousel-item-18" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />                 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                </div>                  
             </div>
             <div class="carta trasera"> </div>
           </div>
@@ -740,7 +815,10 @@
         animation: animacion 0.3s steps(4) forwards infinite;
         background-size: 1368px 500px;
     "></div> 
-
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS ULTRA RARAS</p>
+                </div> 
     </div>
     <div class="carta trasera"> </div>
   </div>
@@ -773,7 +851,10 @@
         animation: animacion 0.4s steps(4) forwards infinite;
         background-size: 1368px 500px;
     "></div> 
-
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS ULTRA RARAS</p>
+                </div> 
     </div>
     <div class="carta trasera"> </div>
   </div>
