--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
@@ -26,7 +24,7 @@
       <!------------------------BOTON DESCARGAR------------------------------------->
 
 <div class="contenedor-instalar">
-    <button id="installBtn" class="boton-instalar" style="display: none;"></button>
+    <button id="installBtn" class="boton-instalar" ></button>
 </div>
 
 
