--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    
     <link rel="stylesheet" tipe="text/css" href="style/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,29 +30,17 @@
 
 
 
-      <div class="banner">
-        <div data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="1000" class="bannermichis"></div>
-        <div data-aos="fade-left" data-aos-duration="1500"  data-aos-delay="700" class="bannermichis"></div>
-        <div class="bannerlogo" ></div>
-      </div>
-
-<!------------------------NAVBAR movil menu------------------------------------->
-
-<div class="menuapp">
 <div class="contenedor">
-  <div data-aos="zoom-out" class="logo"></div>
+  <div  class="logo"></div>
 <div class="botonesmenu">
-  <div data-aos="fade-down" class="noticias"></div>
-    <div class="cajaapp">
-      <a onclick="mostrarGaleria()" data-aos="fade-right" class="galeriaapp"></a>
-      <div class="infoapp">
-        <div data-aos="fade-left"  class="quees"></div>
-        <div data-aos="fade-up" class="insta"></div>
-      </div>
-    </div>
+  <div  class="noticias"></div>
+  <div  class="quees"></div>
+      <a onclick="mostrarGaleria()"  class="galeriaapp"></a>
+  <div class="insta"></div>
+  <div class="descargarapp"></div>
 </div>
 </div>
-</div>
+
 
 
 <div id="galeriaContainer" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000;">
