--- a/galeria.html
+++ b/galeria.html
@@ -861,7 +861,7 @@
 
     <DIV class="contenedorbotoncerrar">
   <a class="botonatras" onclick="abrirVentanaExpansiones()" style="background-image: url(./assets/expansiones.webp);"> EXPANSIONES </a>
-      <a onclick="cerrarGaleriaDesdeIframe()" class="botonatras"> X </a>
+<a href="#" id="botonCerrar" class="botonatras" onclick="cerrarGaleriaDesdeIframe()">X</a>
 <a id="btn-abrir-escaner" class="botonatras" style="background-image: url(./assets/qr.webp);"> ESCANEAR </a>
 
     </DIV>
