--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <div class="contenedor">
   <div  class="logo"></div>
 <div class="botonesmenu">
-  <div  class="noticias"></div>
-  <div  class="quees"></div>
-      <a onclick="mostrarGaleria()"  class="galeriaapp"></a>
-  <div class="insta"></div>
-  <div class="descargarapp"></div>
+  <a onclick="mostrarGaleria()"  class="galeriaapp" style="background-image: url(./assets/boton_CARTAS.webp);"> <img  src="./assets/galeriacartasicon.webp" alt=""> </a>
+  <div  class="quees" style="background-image: url(./assets/boton_QUE_ES.webp);" > <img  src="./assets/QUE_ES_icon.webp" alt=""> </div>
+  <div class="insta" style="background-image: url(./assets/boton_NOTICIAS.webp);"> <img  src="./assets/NOTICIASicon.webp" alt=""> </div>
+  <div class="descargarapp" style="background-image: url(./assets/boton_descargar.webp);"> <img  src="./assets/descargaricon.webp" alt=""> </div>
 </div>
+<p class="descripcionbanner">hjkhjklhgjkjkgfhgfhsdgfhsdlkfhksdlfhksdlasdsadadasdsadsadsadsadasdahfdhfsdkflsdhfkdsfhksldhfkldsfh</p>
 </div>
 
 
