--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <div class="contenedor">
   <div  class="logo"></div>
 <div class="botonesmenu">
-  <a onclick="mostrarGaleria()"  class="galeriaapp" style="background-image: url(./assets/boton_CARTAS.webp);"> <img  src="./assets/galeriacartasicon.webp" alt=""> </a>
-  <div  class="quees" style="background-image: url(./assets/boton_QUE_ES.webp);" > <img  src="./assets/QUE_ES_icon.webp" alt=""> </div>
-  <div class="insta" style="background-image: url(./assets/boton_NOTICIAS.webp);"> <img  src="./assets/NOTICIASicon.webp" alt=""> </div>
-  <div class="descargarapp" style="background-image: url(./assets/boton_descargar.webp);"> <img  src="./assets/descargaricon.webp" alt=""> </div>
+  <a onclick="mostrarGaleria()"  class="galeriaapp" style="background-image: url(./assets/galeriacartasicon.webp);">  </a>
+  <div  class="quees" style="background-image: url(./assets/boton_QUE_ES.webp);" >  </div>
+  <div class="insta" style="background-image: url(./assets/boton_NOTICIAS.webp);">  </div>
+  <div class="descargarapp" style="background-image: url(./assets/boton_descargar.webp);"> </div>
 </div>
-<p class="descripcionbanner">hjkhjklhgjkjkgfhgfhsdgfhsdlkfhksdlfhksdlasdsadadasdsadsadsadsadasdahfdhfsdkflsdhfkdsfhksldhfkldsfh</p>
+<p class="descripcionbanner">Michi box - Juego de gatos collecionables. Proyectual Digitalización I 2025. diseño y realizacion: José Ignacio Pyptyk</p>
 </div>
 
 
