--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="insta" style="background-image: url(./assets/boton_NOTICIAS.webp);">  </div>
   <div class="descargarapp" style="background-image: url(./assets/boton_descargar.webp);"> </div>
 </div>
-<p class="descripcionbanner">Michi box - Juego de gatos collecionables. Proyectual Digitalización I 2025. diseño y realizacion: José Ignacio Pyptyk</p>
+<p class="descripcionbanner">Michi box - Juego de gatos colecionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
 </div>
 
 
