--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="icon" type="image/png" href="/assets/icon-192.png">   
 <meta charset="UTF-8" />
 
-    <title>Michi Box Card Game</title>
+    <title>Michi Box-Card Game</title>
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
   </head>
   <body>
@@ -31,12 +31,12 @@
 
 
 <div class="contenedor">
-  <div  class="logo"></div>
+  <div  class="logo lazy-michi"></div>
 <div class="botonesmenu">
-  <a onclick="mostrarGaleria()"  class="galeriaapp" style="background-image: url(./assets/galeriacartasicon.webp);">  </a>
-  <div  class="quees" style="background-image: url(./assets/boton_QUE_ES.webp);" >  </div>
-  <div class="insta" style="background-image: url(./assets/boton_NOTICIAS.webp);">  </div>
-  <div class="descargarapp" style="background-image: url(./assets/boton_descargar.webp);"> </div>
+  <a onclick="mostrarGaleria()"  class="galeriaapp lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);">  </a>
+  <div  class="quees lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);" >  </div>
+  <div class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);">  </div>
+  <div class="descargarapp lazy-michi" style="background-image: url(./assets/boton_descargar.webp);"> </div>
 </div>
 <p class="descripcionbanner">Michi box - Juego de gatos colecionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
 </div>
