--- a/galeria.html
+++ b/galeria.html
@@ -178,8 +178,8 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/026.webp);" data-target="carousel-item-26"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-17"></button>
+    <div class="carta-wrapper" data-pass="027">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/027.webp);" data-target="carousel-item-27"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -778,7 +778,34 @@
      
 
 
+     <!--------------------------------027---------------------------------------------> 
+       
+        <div class="carousel-item Craro" id="carousel-item-27">
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle2">
+              <img loading="lazy" class="medio" src="assets/cartas/027/027_fondo.webp"/>   
+              <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(45deg) scale(2);">
+                <div class="line-container" style="justify-content: first baseline;" >
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(253, 237, 9);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(0, 240, 192);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(255, 213, 3);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(250, 90, 255);"></div>
+                </div>
+                <div class="line-container" style="justify-content: end;">
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(144, 185, 255);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(255, 132, 241);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(14, 255, 34);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(255, 131, 226);"></div>
+                </div>
+                </div>           
 
+                <img loading="lazy" class="sombra" src="assets/cartas/027/027_holo_001.webp"  />
+                <img loading="lazy" class="capaholograficaestrellas" src="assets/cartas/027/027_holo_002.webp" style="z-index: 9; opacity: 50%;" />
+
+            </div>
+            <div class="carta trasera"> </div>
+          </div>
+        </div>
 
 
 
