--- a/galeria.html
+++ b/galeria.html
@@ -67,15 +67,15 @@
   <div class="expansion" style="background-image: url(./assets/logoprograma03.webp);"></div>
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-pass="001">
+    <div class="carta-wrapper" data-pass="MAXDEF">
       <button  class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="002">
+    <div class="carta-wrapper" data-pass="QUIMICO">
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-2"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="003">
+    <div class="carta-wrapper" data-pass="DINOMAX">
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-3"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
@@ -83,7 +83,7 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-4"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="005">
+    <div class="carta-wrapper" data-pass="WORKALLDAY">
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/005.webp);" data-target="carousel-item-5"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
@@ -95,7 +95,7 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="MAGIC">
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-8"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
@@ -103,7 +103,7 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-9"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="010">
+    <div class="carta-wrapper" data-pass="MUSICAT">
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/010.webp);" data-target="carousel-item-10"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
@@ -212,13 +212,13 @@
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
       <div class="overlay-bloqueo overespecial"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-34"></button>
+    <div class="carta-wrapper" data-pass="034">
+      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
       <div class="overlay-bloqueo overespecial"></div>
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
-      <div class="overlay-bloqueo overespecial"> </div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800"]' data-cartel="<p> Consigue a MICHI CIENTÍFICO & MICHI ROBOT para desbloquear esta carta. </p>" > </div>
     </div>
     <div class="carta-wrapper" data-pass="036">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
@@ -825,6 +825,40 @@
 
         <!---------------------------------------------------------------CARTAS DORADAS-------------------------------------------------------------->  
 
+        <!-----------------------------------------034------------------------------------>
+
+<div class="carousel-item Clegendario" id="carousel-item-34">
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+      <div class="efectoholograficolineas" style="z-index: 8; transform: rotate(-80deg) scale(2);">
+        <div class="line-container" style="justify-content: first baseline;" >
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 20px rgb(255, 221, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 20px rgb(255, 214, 65);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 25px 10px rgb(255, 166, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 10px rgb(255, 204, 0);"></div>
+        </div>
+        <div class="line-container" style="justify-content: end;">
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 15px 10px rgb(157, 125, 13);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 30px 8px rgb(255, 213, 0);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 15px rgb(255, 221, 52);"></div>
+          <div class="line line-rainbow" style=" box-shadow: 0px 0px 20px 10px rgb(174, 182, 19);"></div>
+        </div>
+        </div> 
+              <img loading="lazy" class="arriba" src="./assets/cartas/034/034_fondo.webp"  />
+              <img loading="lazy" class="sombra" src="assets/cartas/034/034_anim.webp" style=" animation: GIRAR 10s linear infinite; filter: opacity(30%);" />
+              <img loading="lazy" class="michi" src="assets/cartas/034/034_michi.webp" style=" z-index: 20;  animation: flotar 2s ease-in-out alternate infinite">
+
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
+                </div> 
+    </div>
+    <div class="carta trasera"> </div>
+  </div>
+</div>
+<!-----------------------------------------------------------------------------> 
+
         <!-----------------------------------------035------------------------------------>
 
 <div class="carousel-item Clegendario" id="carousel-item-35">
@@ -853,7 +887,7 @@
     "></div> 
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS ULTRA RARAS</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
                 </div> 
     </div>
     <div class="carta trasera"> </div>
@@ -889,7 +923,7 @@
     "></div> 
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS ULTRA RARAS</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
                 </div> 
     </div>
     <div class="carta trasera"> </div>
