--- a/galeria.html
+++ b/galeria.html
@@ -218,7 +218,7 @@
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800"]' data-cartel="<p> Consigue a MICHI CIENTÍFICO & MICHI ROBOT para desbloquear esta carta. </p>" > </div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> y <b>●MICHI ROBOT</b> <br> para desbloquear esta carta. </p>" > </div>
     </div>
     <div class="carta-wrapper" data-pass="036">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
