--- a/galeria.html
+++ b/galeria.html
@@ -96,7 +96,7 @@
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="MAGIC">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-8"></button>
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/008.webp);" data-target="carousel-item-8"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -182,8 +182,8 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/027.webp);" data-target="carousel-item-27"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-38"></button>
+    <div class="carta-wrapper" data-pass="028">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-28"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -214,7 +214,7 @@
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
-      <div class="overlay-bloqueo overespecial"></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["SUERTE","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> , <b>●MICHI VENDEDOR</b> <br> y <b>●MICHI GARRA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
@@ -351,7 +351,7 @@
          <div class="carousel-item Cnormal" id="carousel-item-8" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/008.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
@@ -820,7 +820,35 @@
         </div>
 
 
+                <!--------------------------------028---------------------------------------------> 
+       
+        <div class="carousel-item Craro" id="carousel-item-28">
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle1 circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/028/028_fondo.webp"/ style="filter: brightness(0.5);">   
+              <div class="efectoholograficolineas" style="z-index: 9; transform: rotate(90deg) scale(1); filter: opacity(100%);">
+                <div class="line-container" style="justify-content: first baseline;" >
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                </div>
+                <div class="line-container" style="justify-content: end;">
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                  <div class="line line-white"></div>
+                </div>
+                </div>      
+              <img loading="lazy" class="arriba" src="./assets/cartas/028/028_calado.webp"  />
+              <img loading="lazy" class="michi" src="assets/cartas/028/028_sombra_02.webp" style="z-index: 18; animation: rotacion 1.8s ease forwards;" >
+              <img loading="lazy" class="sombra" src="assets/cartas/028/028_sombra.webp" style="animation: sacudida 1.3s ease  forwards;" />
+                <div class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/026/026_QR.webp);"> </div> 
 
+            </div>
+            <div class="carta trasera"> </div>
+          </div>
+        </div>
 
 
         <!---------------------------------------------------------------CARTAS DORADAS-------------------------------------------------------------->  
