--- a/galeria.html
+++ b/galeria.html
@@ -182,8 +182,8 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/027.webp);" data-target="carousel-item-27"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="028">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-28"></button>
+    <div class="carta-wrapper" data-pass="MUNDOFELIZ">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/028.webp);" data-target="carousel-item-28"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -214,7 +214,7 @@
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["SUERTE","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> , <b>●MICHI VENDEDOR</b> <br> y <b>●MICHI GARRA</b> <br> para desbloquear esta carta. </p>"  ></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["SPEED","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> , <b>●MICHI VENDEDOR</b> <br> y <b>●MICHI GARRA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
