--- a/galeria.html
+++ b/galeria.html
@@ -824,25 +824,26 @@
        
         <div class="carousel-item Craro" id="carousel-item-28">
           <div class="tarjeta">
-            <div class="carta frente" data-circle="circle1 circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/028/028_fondo.webp"/ style="filter: brightness(0.5);">   
-              <div class="efectoholograficolineas" style="z-index: 9; transform: rotate(90deg) scale(1); filter: opacity(100%);">
+            <div class="carta frente" data-circle="circle4">
+              <img loading="lazy" class="medio" src="assets/cartas/028/028_fondo.webp"/ style=" animation: psicodelicoBrillo 4s ease-in-out infinite;  animation: psicodelicoBrillo 4s ease-in-out infinite;">   
+               <div class="efectoholograficolineas" style="z-index: 9; transform: rotate(90deg) scale(1);">
                 <div class="line-container" style="justify-content: first baseline;" >
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(253, 237, 9);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(0, 240, 192);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(255, 213, 3);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(250, 90, 255);"></div>
                 </div>
                 <div class="line-container" style="justify-content: end;">
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
-                  <div class="line line-white"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(144, 185, 255);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(255, 132, 241);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(14, 255, 34);"></div>
+                  <div class="line line-rainbow" style=" box-shadow: 0px 0px 10px 5px rgb(255, 131, 226);"></div>
                 </div>
                 </div>      
-              <img loading="lazy" class="arriba" src="./assets/cartas/028/028_calado.webp"  />
+              <img loading="lazy" class="arriba" src="./assets/cartas/028/028_calado.webp" style="filter: brightness(0.7);" />
               <img loading="lazy" class="michi" src="assets/cartas/028/028_sombra_02.webp" style="z-index: 18; animation: rotacion 1.8s ease forwards;" >
               <img loading="lazy" class="sombra" src="assets/cartas/028/028_sombra.webp" style="animation: sacudida 1.3s ease  forwards;" />
+              <img loading="lazy" class="michi" src="assets/cartas/028/028_sombra_03.webp" style="z-index: 19;" />
                 <div class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/026/026_QR.webp);"> </div> 
 
             </div>
