--- a/galeria.html
+++ b/galeria.html
@@ -99,8 +99,8 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/008.webp);" data-target="carousel-item-8"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-9"></button>
+    <div class="carta-wrapper" data-pass="GOLD">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/009.webp);" data-target="carousel-item-9"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="MUSICAT">
@@ -214,7 +214,7 @@
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["SPEED","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear esta carta. </p>"  ></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["GOLD","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
@@ -365,7 +365,7 @@
          <div class="carousel-item Cnormal" id="carousel-item-9" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/009.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
